--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,9 +1,18 @@
 <!--proviteを使用しHTMLタイトルを取得し:title変数に定義-->
 <!--最終的に定義した：titleはテンプレートに適応されページに反映される-->
+<div class="center jumbotron">
+  <h1>Welcome to the Sample App</h1>
 
-    <h1>Sample App</h1>
-    <p>
-      This is the home page for the
-      <a href="https://railstutorial.jp/">Ruby on Rails Tutorial</a>
-      sample application.
-    </p>
+  <h2>
+    This is the home page for the
+    <a href="https://railstutorial.jp/">Ruby on Rails Tutorial</a>
+    sample application.
+  </h2>
+
+  <%= link_to "Sign up now!", '#', class: "btn btn-lg btn-primary" %>
+</div>
+
+<%= link_to image_tag("rails.png", alt: "Rails logo"),
+            'http://rubyonrails.org/' %>
+
+<!--<%= link_to image_tag("kitten.jpg", alt: "neko logo") %>-->
